--- a/meetapp/src/App.css
+++ b/meetapp/src/App.css
@@ -1,97 +1,4 @@
-.App {
-  text-align: center;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-
-.meeting_container {
-  background-color: #0d0d0d;
-  width: 100%;
-}
-
-.main_meeting_container {
-  background-color: #333333;
-  width: 100%;
-  display: flex;
-}
-
-.main_meeting_container_editor {
-  width: 70%;
-  display: flex;
-  height: 70vh;
-  margin-left: -20px;
-  background-color: #1b1b1be2;
-
-
-}
-
-.main_meeting_container_editor_code {
-  width: 60%;
-  height: 70vh;
-  height: 300px;
-
-
-}
-
-.main_meeting_container_editor_output {
-  width: 40%;
-  color: grey;
-}
-
-.main_meeting_container_editor_output p {
-  color: #fff !important;
-}
-
-.editor {
-  border-right: 5px solid #0d0d0d;
-  overflow-y: hidden;
-  /* Hide vertical scrollbar */
-  overflow-x: hidden;
-}
-
-.editor::-webkit-scrollbar {
-  display: none;
-}
-
-.code_controls {
-  width: 67%;
-  display: flex;
-  justify-content: space-between;
-  gap: 10px;
-  margin: 10px;
-}
-
-.code_controls button {
-  background-color: #40bf40;
-  color: #fff;
-  border: none;
-  padding: 5px 10px;
-  border-radius: 5px;
-}
-
-.code_controls select {
-  background-color: #0d0d0d;
-  color: #fff;
-  border: 2px solid grey;
-  border-radius: 5px;
-  padding: 5px 10px;
-}
-
-
-.main_meeting_container_editor_output p {
-  color: #9c9c9c !important;
-
-}
-
-
-
-.styled-video {
-  width: 240px;
-  display: inline-block;
-  /* margin: 10px; */
-  margin: 0px !important;
-  padding: 0px;
-  /* border-radius: 5px !important; */
-  margin-top: 0px !important;
-  display: inline-block;
-
-}
